Fixed clouds covering main window

--- a/Janela/Components/Parts/WeatherAnimations/Cloudy.razor.css
+++ b/Janela/Components/Parts/WeatherAnimations/Cloudy.razor.css
@@ -7,6 +7,7 @@
     overflow: hidden;
     animation: 4s fade-in;
     display: flex;
+    z-index: -5;
 }
 
 .cloud {
